--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans"
+	rel="stylesheet">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Document</title>
+<link href="../css/all.css" rel="stylesheet" type="text/css">
+<link href="../css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<a href="one-page-examples/fondo-gardiente.html">Ver demo One Page fondo gardiente</a>
+	<a href="one-page-examples/fondo-gardiente.html">Ver demo One Page
+		fondo gardiente</a>
+	<a href="columnas-responsivas/index.html">Ver demo dos columnas
+		responsive</a>
+
+	<a href="one-page-no-gen/index.html">One page a pedal sin
+		generadores</a>
 </body>
 
 </html>
